f.services/ans/question_deployment_foo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: foo
  name: foo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: foo
  strategy: {}
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
        - image: dgkanatsios/simpleapp
          name: simpleapp
          ports:
            - containerPort: 8080
          resources: {}
status: {}
